--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <script src="https://unpkg.com/blip-chat-widget" type="text/javascript">
+    </script>
+    <script>
+        (function () {
+            window.onload = function () {
+                new BlipChat()
+                .withAppKey('b25kZWVzdG91Y2VmZXRtZzo2MDA4ZTY2Zi0wMmI5LTRkYzYtOGY2NC1mOTUyOWMzZmJhM2E=')
+                .withButton({"color":"#2CC3D5","icon":""})
+                .build();
+            }
+        })();
+    </script>
+                                    
+
 <head>
 
   <meta charset="utf-8">
