create welcome message

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--Bot Blip-->
     <script src="https://unpkg.com/blip-chat-widget" type="text/javascript">
     </script>
     <script>
@@ -12,8 +13,7 @@
                 .build();
             }
         })();
-    </script>
-                                    
+    </script>                                    
 
 <head>
 
@@ -75,9 +75,9 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Our Studio!</div>
-        <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <div class="intro-lead-in">Bem vindo ao meu site!</div>
+        <div class="intro-heading text-uppercase">É um prazer conhecer você</div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Saber mais</a>
       </div>
     </div>
   </header>
