edit social media description

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>2017 - Hoje</h4>
-                  <h4 class="subheading">Engenharia da Computação</h4>
+                  <h4 class="subheading">Engenharia de Computação</h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">Centro Federal de Educação Tecnológica de Minas Gerais - CEFET-MG</p>
@@ -284,7 +284,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Minhas Redes Sociais</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Aqui estão minhas redes sociais para networking</h3>
         </div>
       </div>
       <div class="row">
