--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>Yan Sirianni - Home</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -294,11 +294,11 @@
             <h4>Yan Sirianni</h4>
             <p class="text-muted">Chatbot developer Intern at Take</p>
             <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a href="#">
                   <i class="fab fa-twitter"></i>
                 </a>
-              </li>
+              </li> -->
               <li class="list-inline-item">
                 <a href="#">
                   <i class="fab fa-facebook-f"></i>
@@ -321,7 +321,7 @@
     </div>
   </section>
 
-  <!-- Clients -->
+  <!-- Clients
   <section class="py-5">
     <div class="container">
       <div class="row">
@@ -347,7 +347,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact -->
   <section id="contact">
