remove contact area

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     </div>
   </section> -->
 
-  <!-- Contact -->
+  <!-- Contact
   <section id="contact">
     <div class="container">
       <div class="row">
@@ -392,7 +392,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Footer -->
   <footer>
