Add facebook and Linkedin links

--- a/index.html
+++ b/index.html
@@ -300,12 +300,12 @@
                 </a>
               </li> -->
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/yan.victor.750">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/yan-victor-0734aa149/">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
