--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
   </section>
 
-  <!-- Portfolio Grid -->
+  <!-- Portfolio Grid
   <section class="bg-light" id="portfolio">
     <div class="container">
       <div class="row">
@@ -216,7 +216,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- About -->
   <section id="about">
