--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         <div class="col-md-4">
           <span class="copyright">Copyright &copy; Yan Sirianni 2019</span>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="#">
@@ -419,8 +419,8 @@
               </a>
             </li>
           </ul>
-        </div>
-        <div class="col-md-4">
+        </div> -->
+        <!-- <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <a href="#">Privacy Policy</a>
@@ -429,7 +429,7 @@
               <a href="#">Terms of Use</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
