--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   <h4 class="subheading">Nascimento</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">Oi! Nasci no dia 5 de abril e sou natural de Belo Horizonte/MG</p>
                 </div>
               </div>
             </li>
@@ -398,7 +398,7 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-12">
           <span class="copyright">Copyright &copy; Yan Sirianni 2019</span>
         </div>
         <!-- <div class="col-md-4">
