Remove services area

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
   </header>
 
-  <!-- Services -->
+  <!-- Services
   <section id="services">
     <div class="container">
       <div class="row">
@@ -118,7 +118,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Portfolio Grid
   <section class="bg-light" id="portfolio">
