Add subtitle to about me area

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Bem vindo ao meu site!</div>
         <div class="intro-heading text-uppercase">É um prazer conhecer você</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Saber mais</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Saber mais</a>
       </div>
     </div>
   </header>
@@ -224,7 +224,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Sobre mim</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Aqui está um breve resumo sobre minha vida =)</h3>
         </div>
       </div>
       <div class="row">
@@ -254,7 +254,7 @@
                   <h4 class="subheading">Ensino médio</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Escola Estadual Santos Dumont</p>
+                  <p class="text-muted">Fiz meu ensino médio na Escola Estadual Santos Dumont</p>
                 </div>
               </div>
             </li>
@@ -268,7 +268,7 @@
                   <h4 class="subheading">Engenharia de Computação</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Centro Federal de Educação Tecnológica de Minas Gerais - CEFET-MG</p>
+                  <p class="text-muted">Estou no 5º período no Centro Federal de Educação Tecnológica de Minas Gerais - CEFET-MG</p>
                 </div>
               </div>
             </li>            
