Remove bot from site

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--Bot Blip-->
+<!-- Bot Blip
     <script src="https://unpkg.com/blip-chat-widget" type="text/javascript">
     </script>
     <script>
@@ -13,7 +13,7 @@
                 .build();
             }
         })();
-    </script>                                    
+    </script>                                     -->
 
 <head>
 
